--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,10 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
+    // "enableI18nLegacyMessageIdFormat": false,
+    // "strictInjectionParameters": true, //
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    // "strictTemplates": true, "fullTemplateTypeCheck":true,
+    "strictInjectionParameters": true
   }
 }
